simple-name directive to illustrate '@' binding

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,7 @@
-<p>This is the partial for view 1.</p>
+<p>Here are some examples of attribute binding...</p>
+<p>controller name: {{name}}</p>
+<button ng-click="setName()">Set Name</button>
+<button ng-click="setName2()">Set Name 2</button>
+<hr/>
+<simple-name name="{{name}}" person="{{person}}"></simple-name>
+<hr/>
