--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view1">attribute</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
@@ -35,6 +35,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
+  <script src="view1/simple-directive.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
